<resources>
    <string name="app_name_realestate">Real Estate Manager</string>
    <string name="page_name_activity_main">List Property</string>
    <string name="page_name_activity_detail">Detail Property</string>
    <string name="page_name_activity_agent_management">Agent Management</string>
    <string name="page_name_search_dialog">Search property</string>
    <string name="page_name_activity_create_property">Create Property</string>
    <string name="page_name_activity_udpdate_property">Update Property</string>
    <string name="page_name_activity_profile">Profile</string>
    <string name="page_name_activity_maps">Maps</string>
    <string name="menu">Menu</string>
    <string name="create_button">Create</string>
    <string name="update_button">Update</string>
    <string name="menu_drawer_agents_management">Agents management</string>
    <string name="menu_drawer_map">Map</string>
    <string name="menu_drawer_currency">Currency</string>
    <string name="menu_drawer_refresh">Refresh Manually</string>
    <string name="menu_drawer_delete">Delete account</string>
    <string name="menu_drawer_logout">Logout</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="description_image">Description image vide</string>
    <string name="email">prenom.nom@realestatemanager.com</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="title_activity_maps">Map</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete your account?</string>
    <string name="list_property_type">Appartement</string>
    <string name="list_property_city">Ottange</string>
    <string name="list_property_unit_price_dollars">$</string>
    <string name="list_property_unit_price_euro">€</string>
    <string name="list_property_price">150000</string>
    <string name="list_property_no_price_indicated">No price indicated</string>
    <string name="none"> </string>
    <string name="date_of_sale_to_define">CLIQUEZ ICI POUR DEFINIR </string>
    <string name="price_in_meter">%1$s m2</string>
    <string name="list_property_no_property_found">No property found</string>
    <string name="list_property_image_name">Image 1 : Le salon</string>
    <string name="detail_property_description_title">Description :</string>
    <string name="detail_property_description_texte">Non loin de la mairie, ce bien d\'exception est fait pour vous ! Véritable
    atout dans notre région, proche de la frontière, et près de toutes commodités, pour vous, seul ou avec votre famille, venez découvrir
    ce qui constituera certainement votre coup de coeur !</string>
    <string name="detail_property_surface_area_title">Surface</string>
    <string name="detail_property_surface_area_text">750 sq m</string>
    <string name="detail_property_number_of_room_title">Rooms</string>
    <string name="detail_property_number_of_room_text">6</string>
    <string name="detail_property_number_of_bathroom_title">Bathrooms</string>
    <string name="detail_property_number_of_bathroom_text">2</string>
    <string name="detail_property_number_of_bedroom_title">Bedrooms</string>
    <string name="detail_property_number_of_bedroom_text">4</string>
    <string name="detail_property_location_title">Location</string>
    <string name="detail_property_location_text">740 Park Avenue&#xA;Apt 6/7A&#xA;New-York&#xA;NY 10021&#xA;United States&#xA;</string>
    <string name="detail_property_points_of_interest_title">Points of interest</string>
    <string name="detail_property_points_of_interest_text">School, Restaurants, markets</string>
    <string name="detail_property_real_estate_agent_title">Real estate agent :</string>
    <string name="detail_property_real_estate_agent_text">%1$s %2$s</string>
    <string name="detail_property_date_of_entry_on_market_title">Date of entry on market :</string>
    <string name="detail_property_date_of_entry_on_market_text">15/08/2019</string>
    <string name="detail_property_status_title">Status :</string>
    <string name="detail_property_status_text">In progress</string>
    <string name="detail_property_date_of_sale_title">Date of Sale :</string>
    <string name="detail_property_date_of_sale_text">03/09/2019</string>
    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="fullscreen_dialog_search_text">SEARCH</string>
    <string name="fullscreen_dialog_page_title">Find properties</string>
    <string name="fullscreen_dialog__by_price">Price</string>
    <string name="fullscreen_dialog__by_surface">Surface</string>
    <string name="fullscreen_dialog__by_points_of_interest">Points of Interests</string>
    <string name="fullscreen_dialog__by_date_entry">Date entry </string>
    <string name="fullscreen_dialog__by_date_sale">Date sale</string>
    <string name="fullscreen_dialog__by_localisation">Town: </string>
    <string name="fullscreen_dialog__by_country">Country: </string>
    <string name="fullscreen_dialog_by_min_bedroom_min">Min bedroom</string>
    <string name="fullscreen_dialog__by_type_of_property">Type of property : </string>
    <string name="fullscreen_dialog_by_status">Status</string>
    <string name="fullscreen_dialog_by_agent">Agent</string>
    <string name="fullscreen_dialog_by_number_of_bedroom_max">Max bedroom</string>
    <string name="fullscreen_dialog__value">VALUE</string>
    <string name="fullscreen_dialog__value_in_meter" translatable="false">%d m</string>
    <string name="fullscreen_dialog__value_in_hours" translatable="false">%d h</string>
    <string name="fullscreen_dialog__value_in_dollars" translatable="false">%d</string>
    <string name="fullscreen_dialog__poi_school">schools</string>
    <string name="fullscreen_dialog__poi_restaurants">restaurants</string>
    <string name="fullscreen_dialog_poi_oil_station">Oil station</string>
    <string name="fullscreen_dialog__poi_shops">shops</string>
    <string name="fullscreen_dialog_poi_car_parks">car parks</string>
    <string name="fullscreen_dialog_poi_tourist_attraction">tourist attraction</string>
    <string name="image_content_description">Image description</string>
    <string name="typeProperty_flat">Flat</string>
    <string name="typeProperty_house">House</string>
    <string name="typeProperty_room">Room</string>
    <string name="select_type_property">--Type property--</string>
    <string name="select_status">-Status-</string>
    <string name="select_number_rooms">0</string>
    <string name="select_number_bedrooms">0</string>
    <string name="select_number_bathrooms">0</string>
    <string name="select_agent">--Agent--</string>
    <string name="create_update_by_price">Price : </string>
    <string name="create_update_by_price_hint">Price in %s : </string>
    <string name="create_update_by_surface">Surface area : </string>
    <string name="create_update_by_points_of_interest">Points of Interests</string>
    <string name="create_update_by_date_entry">Date entry </string>
    <string name="create_update_by_date_sale">Date sale</string>
    <string name="create_update_by_street_number">Street number: </string>
    <string name="create_update_by_street_compl">Additionnal : </string>
    <string name="create_update_by_street_name">Street name: </string>
    <string name="create_update_by_compl_address">Appt 6/7 </string>
    <string name="create_update_by_zip_code">ZIP code: </string>
    <string name="create_update_by_town_name">Town: </string>
    <string name="create_update_by_country_name">Country: </string>
    <string name="create_update_by_number_of_photos">Number of photos</string>
    <string name="create_update_by_type_of_property">Type of property : </string>
    <string name="create_update_by_number_of_rooms">Number of rooms</string>
    <string name="create_update_by_number_of_bathroom">Number of bathroom</string>
    <string name="create_update_by_number_of_bedroom">Number of bedroom</string>
    <string name="create_update_next_button">NEXT PAGE</string>
    <string name="create_update_add_photo_button">ADD PHOTO</string>
    <string name="create_update_confirm_button_create">CREATE PROPERTY</string>
    <string name="create_update_confirm_button_update">UPDATE PROPERTY</string>
    <string name="create_update_previous_button">PREVIOUS PAGE</string>
    <string name="create_update_add_photos">Photos</string>
    <string name="create_update_add_photos_description">Enter the photo\'s name</string>
    <string name="create_update_creation_confirmation_creation">New property added</string>
    <string name="create_update_creation_confirmation_update">Property updated</string>
    <string name="limited_to_300_letters">Description of property (limit 300 letters)</string>
    <string name="create_update_choose_date">CHOOSE DATE</string>
    <string name="dialog_select_image_take_photo">Take Photo</string>
    <string name="dialog_select_image_choose_from_library">Choose from Library</string>
    <string name="dialog_select_image_cancel">Cancel</string>
    <string name="date_picker_date_format">%1$s/%2$s/%3$s</string>
    <string name="agent_management_text">Stéphane Plazza</string>
    <string name="agent_management_agence_text">Plazza Immo</string>
    <string name="agent_management_page_title">Agent Management</string>
    <string name="agent_management_no_agent">No real estate agent</string>
    <string name="agent_management_no_delete_possible">You can\'t delete a agent who have at least one registered property</string>
    <string name="agent_management_ok_choice">OK</string>
    <string name="set_error_street_number">Enter a good street number</string>
    <string name="set_error_street_name">Enter a street name</string>
    <string name="set_error_zip_code">Enter a zip code</string>
    <string name="set_error_town">Enter a town</string>
    <string name="set_error_surface_area">Enter a surface</string>
    <string name="set_error_price">Enter a price</string>
    <string name="set_error_agent">Please select an agent</string>
    <string name="set_error_photo">Please add at least 1 photo</string>
    <string name="date_picker_select_date">Select the date</string>
    <string name="set_error_add_agent_firstname">Enter a firstname</string>
    <string name="set_error_add_agent_lastname">Enter a lastname</string>
    <string name="set_error_add_agent_agency">Enter an agency name</string>
    <string name="status_property_in_progress">in progress</string>
    <string name="status_property_sold">sold</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="alert_dialog_message">Do you want to delete this agent?</string>
    <string name="alert_dialog_gps_disabled">Your GPS seems to be disabled, enable it to see properties</string>
    <string name="alert_dialog_logout">Are you sure you want to logout?</string>
    <string name="alert_dialog_delete_account">Are you sure you want to delete your account?</string>
    <string name="button_connexion_email">CONNEXION</string>
    <string name="error_authentication_canceled">Authentication cancelled&#8230;</string>
    <string name="error_no_internet">No internet connection!</string>
    <string name="error_unknown_error">An unknown error occurred&#8230;</string>
    <string name="your_image_name">Your image name</string>
    <string name="button_save">Save</string>
    <string name="button_clear">Clear</string>
</resources>