<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/activity_main_drawer_agent_management"
        android:icon="@drawable/ic_menu_drawer_person_white_24dp"
        android:title="@string/menu_drawer_agents_management" />
    <item
        android:id="@+id/activity_main_drawer_map"
        android:icon="@drawable/ic_menu_drawer_map_white_24dp"
        android:title="@string/menu_drawer_map" />

    <item
        android:id="@+id/activity_main_drawer_logout"
        android:icon="@drawable/ic_menu_drawer_logout_white_24dp"
        android:title="@string/menu_drawer_logout" />

    <item
        android:id="@+id/activity_main_drawer_delete_account"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menu_drawer_delete" />


</menu>