<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/fragment_detail_property_rootview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/fragment_detail_property_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_image"
        app:srcCompat="?attr/actionModeSplitBackground"
        />

    <TextView
        android:id="@+id/fragment_detail_property_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_description_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_image"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_description_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_description_texte"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_description_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        app:layout_constraintRight_toRightOf="@id/fragment_detail_property_image"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp"
        />


    <!-- BLOC CARACTERISTIQUE SURFACE -->
    <ImageView
        android:id="@+id/fragment_detail_property_surface_area_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_surface_area_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_surface_area_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_surface_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_surface_area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_surface_area_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_description_text"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_surface_area_image"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_surface_area_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_surface_area_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_surface_area_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_surface_area_image"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        />

    <!-- BLOC CARACTERISTIQUE NUMBER OF BEDROOM -->
    <ImageView
        android:id="@+id/fragment_detail_property_number_of_bedroom_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_number_of_bedroom_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_number_of_bedroom_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_bedrooms_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_bedroom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_bedroom_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_description_text"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_surface_area_image"
        android:layout_marginTop="65dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_bedroom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_bedroom_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_number_of_bedroom_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_surface_area_image"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        />

    <!-- BLOC CARACTERISTIQUE NUMBER OF ROOMS -->

    <ImageView
        android:id="@+id/fragment_detail_property_number_of_room_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_surface_area_title"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_surface_area_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_surface_area_title"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_rooms_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_room_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_description_text"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_number_of_room_image"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_surface_area_title"

        android:layout_marginStart="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_room_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_room_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_surface_area_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_room_title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        />

    <!-- BLOC CARACTERISTIQUE NUMBER OF BATHROOM -->

    <ImageView
        android:id="@+id/fragment_detail_property_number_of_bathroom_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_room_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_number_of_bathroom_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_number_of_bathroom_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_bathrooms_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_bathroom_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_bathroom_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_description_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_room_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_number_of_bedroom_title"

        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_number_of_bathroom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_number_of_bathroom_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_number_of_bathroom_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_bathroom_title"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        />


    <!-- BLOC CARACTERISTIQUE LOCATION -->
    <ImageView
        android:id="@+id/fragment_detail_property_location_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_location_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_location_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_location_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_location_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_number_of_bedroom_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_bedroom_text"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_location_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_location_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_location_title"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:id="@+id/fragment_detail_property_location_map"
        android:layout_width="170dp"
        android:layout_height="100dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_bathroom_image"
        app:layout_constraintRight_toRightOf="@id/fragment_detail_property_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_location_text"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_location_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@color/colorPrimaryDark"
        />


    <!-- BLOC CARACTERISTIQUE POINT OF INTEREST -->
    <ImageView
        android:id="@+id/fragment_detail_property_points_of_interest_image"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_detail_property_points_of_interest_title"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_points_of_interest_title"
        android:contentDescription="@string/description_image"
        app:srcCompat="@drawable/detail_icon_point_of_interest_24dp"
        />

    <TextView
        android:id="@+id/fragment_detail_property_points_of_interest_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_points_of_interest_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_location_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_number_of_bedroom_text"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_points_of_interest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_points_of_interest_text"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_points_of_interest_title"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_points_of_interest_title"
        android:layout_marginTop="5dp"
        />


    <!-- BLOC CARACTERISTIQUE REAL ESTATE AGENT -->

    <TextView
        android:id="@+id/fragment_detail_property_real_estate_agent_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_real_estate_agent_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_points_of_interest_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_points_of_interest_title"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_real_estate_agent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_real_estate_agent_text"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_real_estate_agent_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_real_estate_agent_title"
        android:layout_marginStart="5dp"
        />

    <!-- BLOC CARACTERISTIQUE DATE OF ENTRY ON MARKET -->

    <TextView
        android:id="@+id/fragment_detail_property_date_of_entry_on_market_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_date_of_entry_on_market_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_real_estate_agent_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_points_of_interest_title"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_date_of_entry_on_market_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_date_of_entry_on_market_text"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_date_of_entry_on_market_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_date_of_entry_on_market_title"
        android:layout_marginStart="5dp"
        />

    <!-- BLOC CARACTERISTIQUE STATUS -->

    <TextView
        android:id="@+id/fragment_detail_property_status_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_status_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_date_of_entry_on_market_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_points_of_interest_title"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_status_text"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_status_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_status_title"
        android:layout_marginStart="5dp"
        />

    <!-- BLOC CARACTERISTIQUE DATE OF SALE -->

    <TextView
        android:id="@+id/fragment_detail_property_date_of_sale_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_date_of_sale_title"
        app:layout_constraintTop_toBottomOf="@id/fragment_detail_property_status_text"
        app:layout_constraintLeft_toLeftOf="@id/fragment_detail_property_points_of_interest_title"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/fragment_detail_property_date_of_sale_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_property_date_of_sale_text"
        app:layout_constraintTop_toTopOf="@id/fragment_detail_property_date_of_sale_title"
        app:layout_constraintLeft_toRightOf="@id/fragment_detail_property_date_of_sale_title"
        android:layout_marginStart="5dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>